<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LoginIRegistracijaTheme"
    tools:context=".Fragments.LoginFragment">

    <TextView
        style="@style/LoginIRegistracijaTheme.Heading"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trivia_ly"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_above="@id/tv_subtitle"/>

    <TextView
        style="@style/LoginIRegistracijaTheme.Subtitle"
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/et_username"/>

    <EditText
        style="@style/LoginIRegistracijaTheme.InputField"
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:layout_above="@id/et_passwordd"
        android:background="@drawable/et_custom"/>

    <EditText
        style="@style/LoginIRegistracijaTheme.InputField"
        android:id="@+id/et_passwordd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"/>

    <Button
        style="@style/LoginIRegistracijaTheme.button"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_passwordd"
        android:background="@drawable/btn_costum"
        android:text="@string/login"
        android:onClick="userLogin"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>


</RelativeLayout>