<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/apk/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkRedColor"
    android:theme="@style/SingleplayerTheme">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/foreground"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/singleplayer"
            android:textColor="@color/foregroundText"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/topToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/livesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            tools:layout_editor_absoluteX="234dp"
            tools:layout_editor_absoluteY="3dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:contentDescription="@string/livesDesc"
                android:scaleType="centerCrop"
                android:src="@mipmap/heart_icon"
                tools:layout_editor_absoluteX="234dp"
                tools:layout_editor_absoluteY="3dp" />

            <TextView
                android:id="@+id/numberOfLives"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/foregroundText"
                android:textSize="25sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <Button
        style="@style/SingleplayerTheme.Button"
        android:id="@+id/freePlayButton"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/free_play_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <Button
        android:id="@+id/timeTrialButton"
        style="@style/SingleplayerTheme.Button"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/time_trial_bnt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freePlayButton"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        style="@style/SingleplayerTheme.Button"
        android:id="@+id/expertModeButton"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/expert_mode_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar"
        app:layout_constraintVertical_bias="0.719"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="673dp"
        android:layout_height="281dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/singleplayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/multiple_questions" />

</androidx.constraintlayout.widget.ConstraintLayout>